use online instead of reqwest
change default wait time to 0, dont have to worry about rate limiting
since we exit with a successful connection

resolves #3 as it doesnt print anything anymore

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,4 +13,4 @@ repository = "https://github.com/seanbreckenridge/wait-for-internet"
 
 [dependencies]
 structopt = "0.3.3"
-reqwest = "0.9.22"
+online = { git = "https://github.com/jesusprubio/online", branch = "master" }
