--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "wait-for-internet"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2018"
 authors = ["Sean Breckenridge <seanbrecke@gmail.com>"]
 license = "MIT"
@@ -14,3 +14,4 @@ repository = "https://github.com/seanbreckenridge/wait-for-internet"
 [dependencies]
 structopt = "0.3.3"
 online = { git = "https://github.com/jesusprubio/online", branch = "master" }
+spinners = "1.0.0"
