--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "wait-for-internet"
-version = "0.1.4"
+version = "0.1.5"
 edition = "2018"
 authors = ["Sean Breckenridge <seanbrecke@gmail.com>"]
 license = "MIT"
@@ -11,5 +11,7 @@ repository = "https://github.com/seanbreckenridge/wait-for-internet"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
-structopt = "0.3.3"
-online = "0.2.2"
+structopt = "0.3.21"
+online = "2.0.0"
+async-std = "1.9.0"
+
