--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "wait-for-internet"
-version = "0.1.8"
+version = "0.1.9"
 edition = "2021"
 authors = ["Sean Breckenridge <seanbrecke@gmail.com>"]
 license = "MIT"
@@ -11,5 +11,6 @@ repository = "https://github.com/seanbreckenridge/wait-for-internet"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
-structopt = "0.3.21"
 online = "4.0.0"
+clap = { version = "4.1.8", features = ["derive"] }
+anyhow = "1.0.69"
